add open iconic icon font

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       href="https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap"
       rel="stylesheet"
     />
+    <!--
+      using open iconic fonts with bootstrap:
+      https://useiconic.com/open/
+    -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" rel="stylesheet">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
